test/onceCall1_2.slq

def main(){
	x:=H(0);
	y:=H(0);
	f:=()⇒CNOT(x,y); /// error
	return (f(),measure(x));
}
